squelette-pld-comp/ifcc-test-output/testfiles-4_invalid_program2/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:9: error: expected declaration or statement at end of input
    2 |         return 42;
      |         ^~~~~~

exit status: 1
